# learn-asio

./: .gitignore  CMakeLists.txt  main.cpp
include/asio/: async_result.hpp  basic_datagram_socket.hpp  basic_socket.hpp  basic_stream_socket.hpp  execution_context.hpp  io_context.hpp  socket_base.hpp  strand.hpp  this_coro.hpp
include/asio/detail/: completion_handler.hpp  epoll_reactor.hpp  executor_op.hpp  handler_alloc_helpers.hpp  handler_work.hpp  io_object_impl.hpp  null_socket_service.hpp  object_pool.hpp  push_options.hpp  reactive_socket_connect_op.hpp  reactive_socket_recv_op.hpp  reactive_socket_service.hpp  reactive_socket_service_base.hpp  reactor_op.hpp  reactor_op_queue.hpp  scheduler.hpp  scheduler_operation.hpp  service_registry.hpp  socket_ops.hpp  strand_executor_service.hpp  win_iocp_socket_service.hpp  win_iocp_socket_service_base.hpp
include/asio/detail/impl/: epoll_reactor.ipp  reactive_socket_service_base.ipp  scheduler.ipp  service_registry.hpp  service_registry.ipp  strand_executor_service.hpp  strand_executor_service.ipp
include/asio/impl/: execution_context.hpp  execution_context.ipp  io_context.ipp
include/asio/ip/: basic_endpoint.hpp  tcp.hpp
